Mudanças no visual do index.html e login.html

--- a/index.html
+++ b/index.html
@@ -4,23 +4,36 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    <title>E-Game</title>
+    <title>E-Simulator</title>
   </head>
-  <div class="headind">
-    <a class="indextxt"href="index.html">Início</a>
-    <a class="produtostxt"href="index.html">Produtos</a>
-    <a class="contatotxt"href="index.html">Contato</a>
-    <a class="entretxt"href="login.html">Entre</a>
 
+  <body>
   <header>
+  <div class="headind">
+    
+    <a href="index.html">Início</a>
+    <a href="#">Produtos</a>
+    <a href="#">Contato</a>
+    <a href="login.html">Entre</a>
+    <style>
+    header {
+      background-color: lightgray;
+    }
+
+
+    </style>
+
 
   </header>
-  <body>
+
     <style>
     body {
-      background-color: #340b65;
+      background-color: white;
     }
     </style>
+
+    <footer>
+    </footer>
 
   </body>
 </html>
